# tokemak-quant-project

./: .gitignore  README.md  config.py  pyproject.toml  utilities.py
abis/: curve_pool_token_abi.json  maverick_pool_contract_abi.json
data/curve/: blockNumberDates.csv  blockNumberDates_Curve.csv  curve_pool_AddLiquidity.csv  curve_pool_RemoveLiquidity.csv  curve_pool_RemoveLiquidityImbalance.csv  curve_pool_RemoveLiquidityOne.csv  curve_pool_TokenExchangeSwaps.csv  curve_token_Transfers.csv
data/maverick/: blockNumberDates_Maverick.csv
notebooks/: Curve_Analysis.ipynb  Maverick_analysis.ipynb
notebooks/.ipynb_checkpoints/: Maverick_analysis-checkpoint.ipynb
tokemak_quant_project/: fetch_pool_data.py
